@@ -1,3 +1,12 @@
+2008-03-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc-script.js: The ID of the list is now given as an argument.
+
+	* cc.cgi: List of document errors now also expanded by source
+	code fragment generated by scripting.
+	(get_error_label): Use line/column information from the error
+	context node, if any.
+
 2008-03-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* cc.cgi: Line break treatment was different from
